fix: Set -webkit-scrollbar height

--- a/src/app.css
+++ b/src/app.css
@@ -41,6 +41,7 @@ html {
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
     width: 7px;
+    height: 7px;
 }
 
 *::-webkit-scrollbar-track {
